<resources>
    <string name="app_name">Laboratorio02</string>
    <string name="main_titulo">Menu de opciones</string>
    <string name="tvSeleccion">Seleccionar una categoria</string>
    <string name="cmbProductosCategoria"></string>
    <string name="tvListaProductos">Lista de productos</string>
    <string name="lstProductos"></string>
    <string name="tvCantidad">Cantidad a pedir</string>
    <string name="edtProdCantidad"></string>
    <string name="btnProdAddPedido">Agregar</string>
    <string name="pedido_titulo">Datos del Pedido</string>
    <string name="pedido_lbl_correo">Correo Electronico</string>
    <string name="pedido_lbl_modo_entrega">Modo de Entrega</string>
    <string name="pedido_lbl_direccion">Direccion de Envio</string>
    <string name="pedido_lbl_hora_entrega">Hora Solicitada (hh:mm)</string>
    <string name="canal_estado_nombre">ABC</string>
    <string name="canal_estado_descr">aaaaa</string>
</resources>
