<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AltaPedido">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lblTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pedido_titulo"
            tools:text="@string/pedido_titulo" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pedido_lbl_correo"
            tools:text="@string/pedido_lbl_correo" />

        <EditText
            android:id="@+id/edtPedidoCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pedido_lbl_modo_entrega"
            tools:text="@string/pedido_lbl_modo_entrega" />

        <RadioGroup
            android:id="@+id/optPedidoModoEntrega"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/optPedidoRetira"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Retira en local" />

            <RadioButton
                android:id="@+id/optPedidoEnviar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Enviar a domicilio" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pedido_lbl_direccion" />

        <EditText
            android:id="@+id/edtPedidoDireccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pedido_lbl_hora_entrega" />

        <EditText
            android:id="@+id/edtPedidoHoraEntrega"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="time"
            android:text="" />

        <ListView
            android:id="@+id/lstPedidoItems"
            android:layout_width="match_parent"
            android:layout_height="103dp"
            android:visibility="visible"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnPedidoAddProducto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Agregar Producto" />

            <Button
                android:id="@+id/btnPedidoQuitarProducto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Quitar Producto" />
        </LinearLayout>

        <TextView
            android:id="@+id/lblTotalPedido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Total del pedido: $0"
            android:visibility="visible"
            tools:text="Total del pedido: $00.00" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnPedidoHacerPedido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Hacer Pedido" />

            <Button
                android:id="@+id/btnPedidoVolver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Volver" />
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>